--- a/myresume.html
+++ b/myresume.html
@@ -22,7 +22,7 @@
 
         </div>
         <div id="box4">
-            <h4>Highersecondry school</h4>
+            <h4>Higher secondry school- Govt school</h4>
         </div>
         
     </div>
